     * Start PrusaLink even without a connection to the printer
     * Start sending telemetry slowly after a period of inactivity
     * Files can be printed without selecting first, fixed job printTime info in api/job
     * Don't wait for a printer to boot when running through the EINSY pins
     * Added api/v1/info endpoint

0.6.0 (2021-12-17)
    * Added endpoint for control of extruder
    * Added endpoint for heatbed temperature control
    * Static web update
      - Add debug outputs to investigate project picture collision
      - Removed unnecessary colon after hostname in Dashboard
      - Switched from data.link to data.printer for settings end point
      - Add advanced upload widget
      - Printer Control Page
      - Add target temperatures to the left sidebar
      - Add possibility to send control values by Enter key press
      - Add serial number setting
      - Prevent api polling when previous requests were not handled
      - Prevent error messages flood in case of a connection problem
      - Optimize application loop
      - Add serial, CONNECT and communication state to the left side bar
    * Added size and date attributes to api/logs GET endpoint
    * Removed m_time file attribute
    * Added restriction for forbidden characters in uploaded file name
    * Added download and basic upload info to link-info page
    * Added and implemented JSON file with HW limits
    * Added api/printer/printhead GET endpoint
    * Changed variable firmware_version to firmware
    * Added LOAD/UNLOAD filament commands
    * Added disable_steppers command to api/printer/printhead
    * Implementation of farm_mode into api/settings endpoints
    * New Upload errors
      - check Content-Length header
      - check if file is uploaded complete
      - check storage free space first
      - errors refactoring
      - simple html errors
    * Changed args to kwargs for high level commands
    * HTTP Request handling improvement