@@ -99,6 +99,10 @@
      * Files can be printed without selecting first, fixed job printTime info in api/job
      * Don't wait for a printer to boot when running through the EINSY pins
      * Added api/v1/info endpoint
+     * Add printer statistics tracking
+     * Add time to filament change tracking
+     * Fix mbl data format
+     * Add sheet settings tracking
 
 0.6.0 (2021-12-17)
     * Added endpoint for control of extruder
